# rustrest

./: .gitignore  Cargo.toml  Dockerfile  README.adoc  README.md  cloudbuild.yaml  deployment.yaml  gkedeployment.yaml
postman/: rustrest.postman_collection.json
src/: main.rs
src/repo/: mod.rs
